--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
             
             <div class="col-md-4">
-              <p><span>Email:</span> <a href="mailto:sashikant@geekcops.com">sashikant@geekcops.com</a></p>
+              <p><span>Email:</span> <a href="mailto:sashikantojha@protonmail.com">sashikantojha@protonmail.com</a></p>
             </div>
             <div class="col-md-4">
               <p><span>Linkedin:</span> <a href="https://www.linkedin.com/in/skojha32/">linkedin.com/in/skojha32</a></p>
@@ -439,7 +439,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="mailto:sashikant@geekcops.com">sashikant@geekcops.com</a></p>
+                <p class="h3 email"><a href="mailto:sashikantojha@protonmail.com">sashikantojha@protonmail.com</a></p>
               </div>
             </div>
           </div>
