--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <li><a href="https://github.com/skojha32"><span class="icon-github"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="mailto:skojha32@geekcops.com">skojha32@geekcops.com</a></p>
+                  <p>Email: <a href="mailto:skojha32@geekcops.com">sashikantojha@protonmail.com</a></p>
                   
                 </div>
             </div>
