--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@
 
             <div class="exp mt-5 ftco-animate" id="profile-section">
               <h2 class="mb-4">Experience</h2>
+              
+              <div class="exp-wrap py-4">
+                <div class="desc">
+                  <h4>Technology Head <span> - Bornsec Consulting</span> </h4>
+                  <p class="location">Bangalore - India</p>
+                </div>
+                <div class="year">
+                  <p>2023 - Present</p>
+                </div>
+              </div>
 
               <div class="exp-wrap py-4">
                 <div class="desc">
@@ -196,7 +206,7 @@
                   <p class="location">Bangalore - India</p>
                 </div>
                 <div class="year">
-                  <p>2022 - Present</p>
+                  <p>2022 - 2023</p>
                 </div>
               </div>
 
