--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
 
               <div class="exp-wrap py-4">
                 <div class="desc">
+                  <h4>Operations Head <span> - HMTS</span> </h4>
+                  <p class="location">Bangalore - India</p>
+                </div>
+                <div class="year">
+                  <p>2017 - Present</p>
+                </div>
+              </div>
+
+              <div class="exp-wrap py-4">
+                <div class="desc">
                   <h4>Security Engineer <span> - KnittGlobal</span> </h4>
                   <p class="location">Bangalore - India</p>
                 </div>
@@ -247,6 +257,16 @@
 
               <div class="exp-wrap py-4">
                 <div class="desc">
+                  <h4>Enterprise Defense Administrator</h4>
+                  <p class="location">eEDA</p>
+                </div>
+                <div class="year">
+                  <p>2023 - 2023</p>
+                </div>
+              </div>
+
+              <div class="exp-wrap py-4">
+                <div class="desc">
                   <h4>Certified Ethical Hacker Master</h4>
                   <p class="location">EC-Council</p>
                 </div>
@@ -268,7 +288,7 @@
               <div class="exp-wrap py-4">
                 <div class="desc">
                   <h4>Master of Business Administration in Operations and Business Analytics</h4>
-                  <p class="location">Bengaluru University</p>
+                  <p class="location">Presidency University</p>
                 </div>
                 <div class="year">
                   <p>2021 - Present</p>
