--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
                     <li class="nav-item"><a href="Sashi-Resume.pdf" download class="nav-link"><span>Resume</span></a>
                     </li>
-                    <li class="nav-item"><a href="https://skojha32.github.io/blog/"
-                        class="nav-link"><span>Blog</span></a></li>
-                    <li class="nav-item"><a href="https://sashikant.substack.com/"
-                        class="nav-link"><span>Newsletter</span></a></li>
+<!--                     <li class="nav-item"><a href="https://skojha32.github.io/blog/"
+                        class="nav-link"><span>Blog</span></a></li> -->
+<!--                     <li class="nav-item"><a href="https://sashikant.substack.com/"
+                        class="nav-link"><span>Newsletter</span></a></li> -->
                   </ul>
                 </div>
               </div>
@@ -89,7 +89,20 @@
             data-scrollax-parent="true">
             <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
               <p><a href="#" class="scroll">Hello! I'm a</a></p>
-              <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Security Engineer</h1>
+              <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Project Manager</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+
+       <div class="slider-item js-fullheight">
+        <div class="overlay"></div>
+        <div class="container">
+          <div class="row slider-text align-items-center text-center justify-content-center"
+            data-scrollax-parent="true">
+            <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+              <p><a href="#" class="scroll">Hello! I'm a</a></p>
+              <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Security Engineer</h1>
             </div>
           </div>
         </div>
@@ -192,7 +205,7 @@
               
               <div class="exp-wrap py-4">
                 <div class="desc">
-                  <h4>Technology Head <span> - Bornsec Consulting</span> </h4>
+                  <h4>Project Manager <span> - Bornsec Consulting</span> </h4>
                   <p class="location">Bangalore - India</p>
                 </div>
                 <div class="year">
@@ -247,7 +260,19 @@
               <h2 class="mb-4">Education</h2>
               <div class="exp-wrap py-4">
                 <div class="desc">
-                  <h4>Certified Red Team Professional</h4>
+                  <h4>Offensive Security Certified Professional [OSCP]</h4>
+                  <p class="location">Offensive Security</p>
+                </div>
+                <div class="year">
+                  <p>2023 - 2024</p>
+                </div>
+              </div>
+
+            <div class="exp mt-5 ftco-animate">
+              <h2 class="mb-4">Education</h2>
+              <div class="exp-wrap py-4">
+                <div class="desc">
+                  <h4>Certified Red Team Professional [CRTP]</h4>
                   <p class="location">Pentester Academy</p>
                 </div>
                 <div class="year">
@@ -257,8 +282,8 @@
 
               <div class="exp-wrap py-4">
                 <div class="desc">
-                  <h4>Enterprise Defense Administrator</h4>
-                  <p class="location">eEDA</p>
+                  <h4>Enterprise Defense Administrator [eEDA]</h4>
+                  <p class="location">INE</p>
                 </div>
                 <div class="year">
                   <p>2023 - 2023</p>
