--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div class="collapse navbar-collapse" id="ftco-nav">
                   <ul class="navbar-nav nav ml-auto">
                     <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
-                    <li class="nav-item"><a href="Sashi-Resume.pdf" download class="nav-link"><span>Resume</span></a>
-                    </li>
+<!--                     <li class="nav-item"><a href="Sashi-Resume.pdf" download class="nav-link"><span>Resume</span></a>
+                    </li> -->
 <!--                     <li class="nav-item"><a href="https://skojha32.github.io/blog/"
                         class="nav-link"><span>Blog</span></a></li> -->
 <!--                     <li class="nav-item"><a href="https://sashikant.substack.com/"
@@ -165,7 +165,7 @@
               <h2 class="mb-5">Hi! I'm Sashi Kant Ojha H</h2>
               <p>I’ve lived a life of ever-evolving interests. Not setting a limit to where I want to go has given me a
                 lot of passion.</p>
-              <p><a href="Sashi-Resume.pdf" download>Checkout my resume</a></p>
+<!--               <p><a href="Sashi-Resume.pdf" download>Checkout my resume</a></p> -->
               <ul class="ftco-footer-social list-unstyled mt-4">
                 <li><a href="https://twitter.com/indian_noob"><span class="icon-twitter"></span></a></li>
                 <li><a href="https://www.facebook.com/sashi.kant.9231"><span class="icon-facebook"></span></a></li>
