--- a/index.html
+++ b/index.html
@@ -185,10 +185,11 @@
           <div class="col-md-10">
             <div class="profile ftco-animate">
               <h2 class="mb-4">Profile</h2>
-              <h4 class="mb-4">My name is Sashi Kant Ojha and I’m a Certified Ethical Hacker Master and , designer,
-                developer, and
-                content creator. I seek a career that will further hone my skill tree while also being able to
-                contribute with the skills I have.</h4>
+              <h4 class="mb-4">A friendly neighborhood cybersecurity enthusiast dedicated to protecting digital landscapes. An Offensive Security
+Certified Professional (OSCP), Certified Ethical Hacker Master (CEH Master V10), Certified Red Team Professional
+(CRTP), and Enterprise Defense Administrator (eEDA). I’m also an active member of null, OWASP Bangalore, and other
+cyber security communities. I have also been a trusted advisor to clients, offering expertise in incident analysis, response
+strategies, and mitigation techniques.</h4>
               <p> An active member of null, OWASP Bangalore and other cyber security communities. Enjoy travelling and
                 meeting new people for purpose driven gatherings.</p>
               <div class="row my-5">
@@ -268,8 +269,7 @@
                 </div>
               </div>
 
-            <div class="exp mt-5 ftco-animate">
-              <h2 class="mb-4">Education</h2>
+            
               <div class="exp-wrap py-4">
                 <div class="desc">
                   <h4>Certified Red Team Professional [CRTP]</h4>
